--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -5,7 +5,7 @@
     {
       "name": "VisitPlus",
       "format": "LINKED_PLACES",
-      "src": "docs/data/Katalog csv.csv",
+      "src": "./data/relief_brooches_clean.json",
       "attribution": "VisitPlus © <a href=\"https://britishlibrary.github.io/locating-a-national-collection/\" target=\"_blank\"><i>Locating a National Collection</i> Partners & Contributors</a>"
     }
   ],
